# Time_Series

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Multi_Variate_Time_Series_VAR.ipynb  README.md  SECURITY.md  SUPPORT.md  Time_Series_Bitcoin_Prediction_LSTM.ipynb  Time_Series_RNN_on_LSTM.ipynb  Time_Series_Share_Forecast_Stocker_Prophet.ipynb  Time_Series_Stock_Prediction_Prophet_LSTM_KNN_Linear_Regression_ARIMA.ipynb  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  model_proposal.yml
.github/workflows/: ci.yml  codeql.yml  link-check.yml  publish-pypi.yml
docs/: BENCHMARK_LEADERBOARD.md  BENCHMARK_METHODOLOGY.md  FAQ.md  FORECASTING_METHODS_INDEX.md  GLOSSARY.md  README.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  TROUBLESHOOTING.md  model-selection-and-use-cases.md  time-series-forecasting-guide.md
src/time_series_reference/: classical.py  ml.py
src/timeseries_reference/: __init__.py  backtesting.py  baselines.py  benchmark.py  classical.py  datasets.py  leaderboard.py  metrics.py  ml.py  validation.py
tests/: test_models_and_datasets.py  test_reference.py
