[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-reference"
version = "0.2.0"
description = "Practical reference implementations for classical and modern time-series forecasting workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Saurav Singla"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.optional-dependencies]
classical = ["statsmodels>=0.14", "scikit-learn>=1.4"]
modern = ["torch>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]
all = [
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "torch>=2.2",
]

[project.scripts]
time-series-benchmark = "timeseries_reference.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
