[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-reference"
version = "0.2.0"
description = "Reproducible Python time-series forecasting benchmark with walk-forward backtesting, leakage-safe validation, statistical baselines and machine-learning model comparison"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Saurav Singla"}]
keywords = [
  "time-series",
  "time-series-analysis",
  "time-series-forecasting",
  "python-time-series-forecasting",
  "forecasting",
  "forecasting-benchmark",
  "forecasting-model-comparison",
  "forecast-accuracy",
  "forecasting-metrics",
  "python",
  "backtesting",
  "forecasting-backtesting",
  "time-series-cross-validation",
  "leakage-safe-validation",
  "chronological-validation",
  "rolling-origin-evaluation",
  "walk-forward-validation",
  "expanding-window",
  "rolling-window",
  "autoregression",
  "exponential-smoothing",
  "holt-winters",
  "arima",
  "sarima",
  "recursive-forecasting",
  "lag-features",
  "machine-learning",
  "deep-learning",
  "lstm",
  "gru",
  "n-beats",
  "patchtst",
  "probabilistic-forecasting",
  "prediction-intervals",
  "demand-forecasting",
  "sales-forecasting",
  "inventory-forecasting",
  "energy-load-forecasting",
  "economic-forecasting",
  "financial-forecasting",
  "anomaly-detection",
  "reproducible-research",
  "statsmodels",
  "scikit-learn"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
]

[project.urls]
Homepage = "https://github.com/sauravsingla/Time_Series"
Documentation = "https://github.com/sauravsingla/Time_Series/tree/master/docs"
Repository = "https://github.com/sauravsingla/Time_Series"
Issues = "https://github.com/sauravsingla/Time_Series/issues"
Changelog = "https://github.com/sauravsingla/Time_Series/blob/master/CHANGELOG.md"
Leaderboard = "https://github.com/sauravsingla/Time_Series/blob/master/docs/BENCHMARK_LEADERBOARD.md"
MethodsIndex = "https://github.com/sauravsingla/Time_Series/blob/master/docs/FORECASTING_METHODS_INDEX.md"

[project.optional-dependencies]
classical = ["statsmodels>=0.14", "scikit-learn>=1.4"]
modern = ["torch>=2.2"]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1",
]
all = [
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "torch>=2.2",
]

[project.scripts]
time-series-benchmark = "timeseries_reference.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["timeseries_reference"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
